--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "trailingComma": "all"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
     "@types/react": "^16.8.20",
     "@zeit/next-typescript": "^1.1.1",
     "next": "^8.1.0",
